# SFTP_Client

./: .gitignore  README.md  SFTPSyncClient.spec  build.sh  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/models/: config.py
app/services/: autostart_service.py  reconnect_service.py  settings_service.py  sftp_service.py  theme_manager.py  tray_service.py
app/storage/: credentials_store.py
app/ui/: login_page.py  main_window.py  remote_directory_dialog.py  sync_page.py
app/utils/: constants.py  file_dialogs.py  paths.py  platform_paths.py  resources.py  runtime.py  ssh_keys.py
app/workers/: sync_worker.py
scripts/: build_deb.sh  build_exe.ps1
