[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sftp-sync-client"
version = "0.1.0"
description = "Desktop SFTP sync client built with PySide6 and Paramiko."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LocalTools" }
]
dependencies = [
  "PySide6>=6.7.0",
  "paramiko>=3.4.0",
  "watchdog>=4.0.0",
  "keyring>=25.2.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11.0",
]

[project.scripts]
sftp-sync-client = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["app*"]
